merge: 同步 dev 全部后端功能到 master
包含: 路径录制/作品巡礼路径、OSS 图片上传、打卡 CRUD/点赞、观景点关联、
用户统计与短信验证码注册、个人信息/密码管理、全局异常处理、AR 融合图微服务及构建脚本等。
内容与 origin/dev (0b7194f) 一致，已在 dev 分支评审。

Change-Id: I37cefdb51e1a58ac89a28a3127ce05ff12bd9cce